--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "mocha": "^3.4.2",
     "mocha-webpack": "^0.7.0",
     "null-loader": "^0.1.1",
-    "react-hot-loader": "next",
+    "react-hot-loader": "^3.1.3",
     "react-test-renderer": "^16.0.0",
+    "redbox-react": "^1.5.0",
     "sinon": "^3.0.0",
     "style-loader": "0.19.0",
+    "svg-inline-loader": "^0.8.0",
     "url-loader": "^0.6.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.7.1",
@@ -65,21 +67,27 @@
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "invariant": "^2.2.2",
+    "isemail": "^3.0.0",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
     "normalizr": "^3.2.2",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-fastclick": "^3.0.2-alpha.1",
+    "react-flexbox-grid": "^2.0.0",
     "react-helmet": "^5.0.3",
     "react-redux": "^5.0.1",
     "react-router": "4.1.1",
     "react-router-dom": "4.1.1",
     "react-router-redux": "next",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.3.1",
+    "redux-form": "^7.1.2",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
     "spin.js": "^2.3.2",
+    "uuid": "^3.1.0",
     "webpack-dev-middleware": "^1.12.0"
   }
 }
