--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sinon": "^3.0.0",
     "style-loader": "0.19.0",
     "svg-inline-loader": "^0.8.0",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.6.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.7.1",
