--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "classnames": "^2.2.3",
     "express": "^4.15.3",
     "history": "^4.6.1",
+    "i18next": "^10.2.1",
     "immutable": "^3.8.1",
     "invariant": "^2.2.2",
     "isemail": "^3.0.0",
@@ -78,6 +79,7 @@
     "react-fastclick": "^3.0.2-alpha.1",
     "react-flexbox-grid": "^2.0.0",
     "react-helmet": "^5.0.3",
+    "react-media": "^1.6.1",
     "react-redux": "^5.0.1",
     "react-router": "4.1.1",
     "react-router-dom": "4.1.1",
